--- a/smack/Base.lproj/Main.storyboard
+++ b/smack/Base.lproj/Main.storyboard
@@ -13,6 +13,9 @@
         <array key="AvenirNext.ttc">
             <string>AvenirNext-Regular</string>
         </array>
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue-Bold</string>
+        </array>
     </customFonts>
     <scenes>
         <!--Reveal View Controller-->
@@ -42,7 +45,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xBO-nN-poQ">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xBO-nN-poQ" customClass="GradientView" customModule="smack" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L9l-JD-iiD">
@@ -92,19 +95,76 @@
         <scene sceneID="dws-2A-z6u">
             <objects>
                 <viewController id="Usz-JL-M2z" customClass="ChannelVC" customModule="smack" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Mnk-6i-9Le">
+                    <view key="view" contentMode="scaleToFill" id="Mnk-6i-9Le" customClass="GradientView" customModule="smack" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Xu-d5-pvV">
+                                <rect key="frame" x="10" y="40" width="73" height="27"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHANNELS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vI5-Lf-Hmh">
+                                <rect key="frame" x="10" y="77" width="91" height="24"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="doQ-hD-dKj">
+                                <rect key="frame" x="281" y="78" width="22" height="22"/>
+                                <state key="normal" image="addChannelButton"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="icc-Y7-0TY">
+                                <rect key="frame" x="10" y="556" width="99" height="99"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ymK-NW-BYJ">
+                                <rect key="frame" x="0.0" y="121" width="375" height="415"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R5s-Z0-Wru">
+                                <rect key="frame" x="139" y="593" width="54" height="24"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="icc-Y7-0TY" firstAttribute="top" secondItem="ymK-NW-BYJ" secondAttribute="bottom" constant="20" id="37Z-iR-B6H"/>
+                            <constraint firstItem="icc-Y7-0TY" firstAttribute="leading" secondItem="ywC-Js-XdB" secondAttribute="leading" constant="10" id="3ar-W5-bNK"/>
+                            <constraint firstItem="vI5-Lf-Hmh" firstAttribute="leading" secondItem="ywC-Js-XdB" secondAttribute="leading" constant="10" id="JX9-Bv-1AC"/>
+                            <constraint firstItem="5Xu-d5-pvV" firstAttribute="top" secondItem="ywC-Js-XdB" secondAttribute="top" constant="20" id="Lib-lC-v0G"/>
+                            <constraint firstItem="doQ-hD-dKj" firstAttribute="centerY" secondItem="vI5-Lf-Hmh" secondAttribute="centerY" id="OcJ-it-Bbx"/>
+                            <constraint firstItem="ywC-Js-XdB" firstAttribute="bottom" secondItem="icc-Y7-0TY" secondAttribute="bottom" constant="12" id="SYi-Te-NQk"/>
+                            <constraint firstItem="R5s-Z0-Wru" firstAttribute="leading" secondItem="icc-Y7-0TY" secondAttribute="trailing" constant="30" id="Wxa-Q4-coH"/>
+                            <constraint firstItem="ymK-NW-BYJ" firstAttribute="leading" secondItem="ywC-Js-XdB" secondAttribute="leading" id="c05-WC-ync"/>
+                            <constraint firstItem="5Xu-d5-pvV" firstAttribute="leading" secondItem="ywC-Js-XdB" secondAttribute="leading" constant="10" id="jyG-N1-yP5"/>
+                            <constraint firstItem="ymK-NW-BYJ" firstAttribute="top" secondItem="vI5-Lf-Hmh" secondAttribute="bottom" constant="20" id="m5J-7f-wvv"/>
+                            <constraint firstItem="ywC-Js-XdB" firstAttribute="trailing" secondItem="doQ-hD-dKj" secondAttribute="trailing" constant="72" id="vyi-fK-GQc"/>
+                            <constraint firstItem="vI5-Lf-Hmh" firstAttribute="top" secondItem="5Xu-d5-pvV" secondAttribute="bottom" constant="10" id="x9h-xQ-WfG"/>
+                            <constraint firstItem="R5s-Z0-Wru" firstAttribute="centerY" secondItem="icc-Y7-0TY" secondAttribute="centerY" id="y6H-ez-xB6"/>
+                            <constraint firstItem="ymK-NW-BYJ" firstAttribute="trailing" secondItem="ywC-Js-XdB" secondAttribute="trailing" id="zZv-Iu-O5S"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ywC-Js-XdB"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="topColor">
+                                <color key="value" red="0.29019607843137252" green="0.30196078431372547" blue="0.84705882352941175" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="buttomColor">
+                                <color key="value" red="0.17254901960784313" green="0.83137254901960778" blue="0.84705882352941175" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LhV-uB-ZXq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="942" y="-209"/>
+            <point key="canvasLocation" x="941.60000000000002" y="-209.14542728635683"/>
         </scene>
     </scenes>
     <resources>
+        <image name="addChannelButton" width="22" height="22"/>
+        <image name="menuProfileIcon" width="99" height="99"/>
         <image name="smackBurger" width="40" height="40"/>
     </resources>
 </document>
